--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
-              <img src="./images/img4.jpg" alt="photo" width="264" />
+              <img src="./images/img4.jpg" alt="photo" />
               <div class="team-card">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
@@ -176,7 +176,7 @@
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/img5.jpg" alt="photo" width="264" />
+              <img src="./images/img5.jpg" alt="photo" />
               <div class="team-card">
                 <h3 class="team-subtitle">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
@@ -213,7 +213,7 @@
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/img6.jpg" alt="photo" width="264" />
+              <img src="./images/img6.jpg" alt="photo" />
               <div class="team-card">
                 <h3 class="team-subtitle">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
@@ -250,7 +250,7 @@
               </div>
             </li>
             <li class="team-item">
-              <img src="./images/img7.jpg" alt="photo" width="264" />
+              <img src="./images/img7.jpg" alt="photo" />
               <div class="team-card">
                 <h3 class="team-subtitle">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
